[tool.poetry]
name = "wh-conv"
version = "0.1.0"
description = "A simply CLI converter"
authors = ["whitehamster26"]
packages = [
  { include = "wh-conv" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
pytest = "^5.4.2"
pytest-cov = "^2.9.0"

[[tool.poetry.source]]
name = "testpypi"
url = "https://test.pypi.org/legacy/"

[tool.poetry.scripts]
wh-conv = "wh-conv.scripts.wh-conv:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

